src/sections/portfolio/portfolio.css
#portfolio {
  /* margin-top: 160px;
  padding-top: 150px; */
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100vw;
  align-items: center;
  justify-content: center;
}

#portfolio.dark {
  background: transparent;
}

.portfolio-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  /* background: #fefefe; */
  background-color: #fefefe;
  opacity: 0.3;
  background-image: radial-gradient(
    #00baff 0.9500000000000001px,
    #fefefe 0.9500000000000001px
  );
  background-size: 19px 19px;
}

.portfolio-overlay.dark {
  background-color: rgb(78, 78, 78);
  opacity: 0.1;
  background-image: radial-gradient(
    #fefefe 0.9500000000000001px,
    #3d3d3d 0.9500000000000001px
  );
  background-size: 19px 19px;
  /* background: rgb(0, 0, 0); */
  /* background: linear-gradient(
    81deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(43, 43, 43, 1) 47%,
    rgba(21, 21, 21, 1) 100%
  ); */
}

.skills-title .project-title {
  display: block;
  font-size: 42px;
  margin: 0 auto;
  position: relative;
  padding-bottom: 6px;
  font-weight: bold;
  color: #151515;
  text-align: center;
  transition: none;
}

.skills-title .project-title::after {
  content: " ";
  position: absolute;
  bottom: -1px;
  height: 6px;
  left: 38%;
  width: 62%;
  transform: translateX(-30%);
  background-color: var(--primary-brand-color-400);
  border-radius: 10px;
}

h3.project-title.dark {
  color: #333333;
}

.skills-title .project-title.dark {
  color: white;
}

.portfolio__container.dark {
  background: transparent;
}

.section-categorybutton {
  margin-top: -150px;
  margin-bottom: -120px;
}

.portfolio__categories {
  display: flex;
  justify-content: center;
  gap: 0.3rem;
  flex-wrap: wrap;
  margin-top: 70px;
}

.container.portfolio__categories.dark {
  background: none;
}

.btn.cat__btn {
  padding: 20px 25px;
  text-transform: capitalize;
  transition: var(--transition);
  display: inline-block;
  white-space: nowrap;
  width: 100%;
  display: inline-block;
  width: fit-content;
  z-index: 145 !important;
}

button.btn.cat__btn.skill-btn {
  display: inline-block;
  width: fit-content;
}

.btn.cat__btn:hover {
  transform: translateY(0);
  border: 1px solid var(--primary-brand-color-400);
  background-color: #fff;
  color: var(--primary-brand-color-400);
}

.primary {
  background: var(--primary-brand-color-400);
}

/* -------------------------  */
/* Portfolio card section */

.container.portfolio__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
}

.portfolio__projects {
  max-width: 1300px;
  height: auto;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  gap: 30px;
  margin: 0 auto;
  margin-top: 60px;
  background: transparent !important;
}

.project-cards-container {
  display: flex;
  flex-direction: column;
  border-radius: 50%;
  transition: all 0.3s ease;
}

.card-container {
  position: relative;
  border-radius: var(--border-radius-1);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out;
  height: 470px;
  border: 1px solid var(--primary-opposite-color-1);
  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
  /* box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px; */
  overflow: hidden;
  transition: transform 0.3s ease-in-out;
}

.card-container.dark {
  border: 1px solid #fdfdfd;
  box-shadow: rgba(255, 255, 255, 0.45) 0px 3px 3px 0px;
}

.cover-image {
  width: 100% !important;
  height: 100% !important;
  position: absolute;
  inset: 0;
  object-fit: contain;
  background: #f49a09;
  background: linear-gradient(135deg, #f49a09, #f2af3d);
  transition: all 0.3s ease-in-out;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: background-color 0.3s ease-in-out;
}

.overlay-hover {
  background-color: rgba(0, 0, 0, 0.6);
}

.project-description {
  position: absolute;
  bottom: 3%;
  left: 1px;
  text-align: left;
  margin: 0 5px;
  margin-bottom: 15px;
  width: 90%;
  padding: 1rem;
  background: rgba(0, 0, 0, 0.5);
  color: white;
  box-sizing: border-box;
  background-color: transparent;
  opacity: 0;
  transform: translateY(10%);
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in;
  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.6);
}

.project-description:hover.fade-in {
  animation: fadeIn 0.3s ease-in-out;
  opacity: 1;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* took me a long time to figure out here. I needed to hover on the entire container of the project-cards-container */
.project-cards-container:hover {
  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
}

.project-title {
  color: white;
  font-weight: bold;
  font-size: 34px;
  margin: 0;
}

.card-description {
  font-size: 17px;
  margin: 0;
  color: rgb(248, 248, 248);
}

.button-card-container {
  display: flex;
  gap: 10px;
  margin-top: 20px;
}
.btn.button-card {
  transition: all 0.3s ease-in-out;
}
.btn.button-card:hover {
  transform: translateY(-2px);
}
.btn .button-card {
  /* text-transform: capitalize;
  background-color: var(--primary-brand-color-400);
  cursor: pointer;
  border: none;
  text-align: center;
  padding: 10px 30px;
  transition: 1s ease; */
}

.button-card-container > .button-card > p a {
  color: white;
}

.btn a {
  color: inherit;
  text-decoration: none;
  font-size: 18px;
}

/* Project Modal Section */
.projectmodal-container {
  width: 545px;
  height: 100vh;
  display: flex;
  justify-content: flex-end;
  position: fixed;
  z-index: 1230;
  top: 0;
  right: 0;
  margin-right: 0;
  flex: 1;
  overflow-y: scroll;
  scrollbar-color: #06d8fd #ffffff;
}

.overlay-projectmodal {
  background-color: black;
  z-index: 200;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  overflow-y: auto;
  background-size: cover;
  background-position: center center;
  opacity: 0.65;
}

.overlay-projectmodal::after {
  background: linear-gradient(to bottom, transparent 0%, rgb(70, 70, 70) 50%);
}

.container-right {
  width: 100%;
  max-width: 100%;
  height: fit-content;
  z-index: 250;
  align-items: right;
  display: flex;
  flex-direction: column;
  background-color: transparent;
  overflow-y: auto;
  overflow-x: overlay;
}

.container-right.dark {
  background: #000;
}

.projectmodal {
  padding: 30px;
  text-align: left;
  background: #fcfaf9;
}

.projectmodal.dark {
  background: #000;
}

.projectmodal-top-row {
  text-align: center;
  display: flex;
  justify-content: space-between;
  vertical-align: middle;
  align-items: center;
  margin-bottom: 5px;
}

.back {
  color: #7e7e7e;
  font-size: 14px;
  cursor: pointer;
}

.back-to-projects a {
  font-weight: 800;
  font-size: 18px;
  word-spacing: 1px;
  letter-spacing: 0.3px;
  color: black;
}

.back-to-projects:hover {
  cursor: pointer;
  text-decoration: underline;
}

.separator hr {
  margin-top: 10px;
  border: 0.5px solid #eaeaea;
  height: 0.7px;
}

.project-main-title-modal {
  margin: 24px 0 8px;
}
.project-title-modal {
  color: #000;
  margin: 24px 0 8px;
  font-size: 24px;
}

.project-modal-text {
  font-size: 18px;
  letter-spacing: 0.5;
  word-spacing: 0.5;
  margin-bottom: 24px;
}

.projectmodal-image {
  z-index: 500;
}
.projectmodal-image {
  width: 100vw;
  height: 800px !important;
  border-radius: 10px;
  border: 1px solid black;
  z-index: 1500;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  /*
* Created with https://www.css-gradient.com
* Gradient link: https://www.css-gradient.com/?c1=eab259&c2=f4a661&gt=l&gd=dtl
*/
  background: #eab259;
  background: linear-gradient(135deg, #eab259, #f4a661);
}

.projectmodal-image img {
  position: absolute;
  inset: 0;
  top: 0;
  left: 0;
  right: 0;
  object-fit: contain;
  width: 100% !important;
  height: 100% !important;
  display: block;
  /* padding: 10px; */
  border: none !important;
}

.projectmodal-about {
  margin: 24px 0 12px;
}

.title-name {
  color: #363636;
}

.projectmodal-tech .technologies {
  margin-top: 10px;
  margin-bottom: 15px;
}

.projectmodal-tech > p span {
  font-weight: bold;
  color: #000;
  background-color: #efe9e4;
  border-radius: 4px;
  padding: 10px 15px;
}

.project-website-heading {
  margin-top: 40px;
  margin-bottom: 12px;
}

.projectmodal-websitelink {
  font-size: 17px;
  color: #363636;
  font-weight: bold;
  cursor: pointer;
}

.projectmodal-websitelink:hover {
  text-decoration: underline;
}

.projectmodal-footer {
  width: 100%;
  height: 60px;
  background-color: #10253a;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 20px 0;
}

.projectmodal-footer-link p {
  color: #fff;
  font-size: 20px;
  letter-spacing: 1px;
  justify-content: center;
  text-align: center;
  z-index: 1500;
}
@media screen and (max-width: 1200px) {
  .portfolio__projects {
    display: grid;
    grid-template-columns: repeat(2, 360px);
  }
}

@media screen and (max-width: 1024px) {
  .card-container {
    width: 100%;
    margin: 0 auto;
  }

  .btn.button-card {
    width: fit-content;
  }
  .skills-title {
    margin-bottom: 20px;
  }
  .section-categorybutton {
    width: 100%;
  }
  .cover-image {
    object-fit: contain !important;
    transform: scale(1.5);
    padding-top: 50px;
    background: #56129b;
    background: linear-gradient(135deg, #4e0f8e, #af71f2);
  }
  .overlay::before {
    content: " ";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.2);
  }

  .overlay::after {
    content: " ";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.4), transparent);
    border-radius: inherit;
    opacity: 1;
  }

  .card-description {
    font-size: 20px;
    color: rgb(255, 255, 255);
    text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.9);
  }
}

@media screen and (max-width: 800px) {
  .portfolio__categories {
    padding-top: 80px;
    width: 70%;
    margin: 0 auto;
    margin-bottom: 30px;
  }
  .portfolio__projects {
    display: grid;
    width: 85%;
    grid-template-columns: 1fr;
  }
}

